test/official_tests/if/fun_in_else.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
if (true) "ok"; else fun foo() {}
